error_trace.txt
Traceback (most recent call last):
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endif'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ALWIN\PROGRAMS\Python\Project 4\get_error.py", line 11, in <module>
    c.get('/courses/')
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\test\client.py", line 1124, in get
    response = super().get(
               ^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\test\client.py", line 475, in get
    return self.generic(
           ^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\test\client.py", line 671, in generic
    return self.request(**r)
           ^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\test\client.py", line 1087, in request
    self.check_exception(response)
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\test\client.py", line 802, in check_exception
    raise exc_value
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\core\views.py", line 162, in manage_courses
    return render(request, 'core/courses.html', context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 155, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 197, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 519, in parse
    raise self.error(token, e)
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 517, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\defaulttags.py", line 862, in do_for
    nodelist_loop = parser.parse(
                    ^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 519, in parse
    raise self.error(token, e)
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 517, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\defaulttags.py", line 862, in do_for
    nodelist_loop = parser.parse(
                    ^^^^^^^^^^^^^
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "D:\ALWIN\PROGRAMS\Python\Project 4\venv\Lib\site-packages\django\template\base.py", line 568, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 259: 'endif', expected 'empty' or 'endfor'. Did you forget to register or load this tag?
